tests/error/union_array_empty.gw
#! [contains] array must be empty
union U {
  int i;
  int[4] j;
}
